--- a/index.html
+++ b/index.html
@@ -38,26 +38,26 @@
             <div class="position-relative">
                 <div class="signup-card">
                     <h1>Sign In</h1>
-                    <div class="row">
-                        <div class="col-12 margin-btm">
-                            <label class="form-label">Mobile Number / Email ID</label>
-                            <input type="text" class="form-input" placeholder="Enter Your Email ID" id="email" />
-                        </div>
-                        <div class="col-12">
-                            <label class="form-label">Enter Password</label>
-                            <input type="text" class="form-input" placeholder="Enter Your Password" id="password" />
-                            <span class="forgot-password">Did You forget you password?<a href=_blank>Click
-                                    here</a></span>
-                        </div>
-                        <div class="col-12">
-                            <div class="align-center">
-                                <span class="content-before-logo">Powered by</span>
-                                <img src="./assets/logo.png">
-                                <span class="content-after-logo">Property Automate</span>
+                        <div class="row">
+                            <div class="col-12 margin-btm">
+                                <label class="form-label">Mobile Number / Email ID</label>
+                                <input type="text" class="form-input" placeholder="Enter Your Email ID" id="email" />
                             </div>
-                            <button onclick="validate()">Sign Up</button>
+                            <div class="col-12">
+                                <label class="form-label">Enter Password</label>
+                                <input type="password" class="form-input" placeholder="Enter Your Password" id="password" />
+                                <span class="forgot-password">Did You forget you password?<a href=_blank>Click
+                                        here</a></span>
+                            </div>
+                            <div class="col-12">
+                                <div class="align-center">
+                                    <span class="content-before-logo">Powered by</span>
+                                    <img src="./assets/logo.png">
+                                    <span class="content-after-logo">Property Automate</span>
+                                </div>
+                                <button onclick="validate()">Sign Up</button>
+                            </div>
                         </div>
-                    </div>
                     <img src="./assets/dot.svg" class="lower-dot" />
                 </div>
             </div>
